--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/shop
 excludes=
+file.reference.Downloads-mysql-connector-java-5.1.15-bin__1_=/home/malek/Downloads/mysql-connector-java-5.1.15-bin (1)
 file.reference.mysql-connector-java-5.1.15-bin__1_.jar=/home/malek/Downloads/mysql-connector-java-5.1.15-bin (1).jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.15-bin__1_.jar}
+    ${file.reference.mysql-connector-java-5.1.15-bin__1_.jar}:\
+    ${file.reference.Downloads-mysql-connector-java-5.1.15-bin__1_}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
